# fffdata

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: basic_usage.py
fffdata/: __init__.py  client.py  endpoints.py  exceptions.py
fffdata/models/: __init__.py  club.py  match.py
